fix template paths

--- a/command/web/template.html
+++ b/command/web/template.html
@@ -4,8 +4,8 @@
 	<link rel="stylesheet" href="static/css/index.css">
 
 	<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
-	<script src="static/live.js"></script>
-	<script src="static/ping.js"></script>
+	<script src="scripts/live.js"></script>
+	<script src="scripts/ping.js"></script>
 </head>
 <body>
 	{{ end }}
