--- a/command/web/template.html
+++ b/command/web/template.html
@@ -2,10 +2,10 @@
 <html>
 <head>
 	<link rel="stylesheet" href="static/css/index.css">
-
+	
 	<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
-	<script src="scripts/live.js"></script>
-	<script src="scripts/ping.js"></script>
+	<script src="static/lib.js"></script>
+
 </head>
 <body>
 	{{ end }}
