screen page sends event to start desktop stream

--- a/command/web/screen.html
+++ b/command/web/screen.html
@@ -4,7 +4,7 @@
 
 	<script>
 		const id = {{ .Client.Id }};
-		Control.init(id);
+		startStream(document.getElementById("screen"), id);
 	</script>
 
 {{ template "tail" }}
