--- a/command/web/index.html
+++ b/command/web/index.html
@@ -4,6 +4,7 @@
 			<th>Country</th>
 			<th>Host</th>
 			<th>User@Computer</th>
+			<th>Operating System</th>
 			<th>Ping</th>
 			<th></th>
 		</thead>
@@ -13,6 +14,7 @@
 				<td><img src="static/images/flags/{{ .GetFlagName }}.png"> {{ .GetCountry }}</td>
 				<td>{{ .GetDisplayHost }}</td>
 				<td>{{ .Computer.GetDisplayName }}</td>
+				<td>{{ .Computer.OperatingSystem }}</td>
 				<td class="ping"> {{ .Ping.Current }}</td>
 				<td><a href="screen?id={{ .Id }}">Screen</td>
 			</tr>
