--- a/command/web/template.html
+++ b/command/web/template.html
@@ -1,17 +1,19 @@
-{{ define "head" }}
 <html>
-<head>
-	<link rel="stylesheet" href="static/css/index.css">
-	
-	<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
-	<script src="static/lib.js"></script>
+	<head>
+		<link rel="stylesheet" href="static/css/index.css">
+		
+		<script>
+			var id;
+		</script>
 
-</head>
-<body>
-	<p id="error" class="error"></p>
-	{{ end }}
-	
-	{{ define "tail" }}
-</body>
+		<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+	</head>
+	<body>
+		<p id="error" class="error"></p>
+
+		<div id="view"></div>	
+	</body>
+
+	<script src="static/lib.js"></script>
+	<script src="static/onload.js"></script>
 </html>
-{{ end }}
