web: version in status bar

--- a/command/web/index.template.html
+++ b/command/web/index.template.html
@@ -12,6 +12,10 @@
 		<p id="error" class="error"></p>
 
 		<div id="view"></div>	
+
+		<div class="statusbar">
+			<p class="version">{{ Version }}</p>
+		</div>
 	</body>
 
 	<script src="static/lib.js"></script>
