Specify scale on screen stream

--- a/command/web/static/screen.html
+++ b/command/web/static/screen.html
@@ -1,1 +1,15 @@
+<div class="scale">
+	<table>
+		<tr>
+			<td>
+				<input id="scale" type="range"></input>
+			</td>
+			<td>
+				<p id="current_scale">50%</p>
+			</td>
+		</tr>
+	</table>
+</div>
+
+<br>
 <img id="screen" src="">
