Select monitor in web, update available monitors on screen packet

--- a/command/web/static/screen.html
+++ b/command/web/static/screen.html
@@ -7,6 +7,9 @@
 			<td>
 				<p id="current_scale">50%</p>
 			</td>
+			<td>
+				<select id="monitors"></select>
+			</td>
 		</tr>
 	</table>
 </div>
