web: add elements to statusbar at runtime, fps counter

--- a/command/web/index.template.html
+++ b/command/web/index.template.html
@@ -14,7 +14,7 @@
 		<div id="view"></div>	
 
 		<!-- Statusbar -->
-		<div class="statusbar">
+		<div id="statusbar" class="statusbar">
 			<p class="version">{{ Version }}</p>
 			<p id="error" class="error"></p>
 		</div>
