--- a/command/web/clients.template.html
+++ b/command/web/clients.template.html
@@ -29,6 +29,7 @@
 				<td>
 					<a onclick="setScreenView({{ .Id }});">Screen</a>
 					<a onclick="setProcessesView({{ .Id }});">Processes</a>
+					<a onclick="setDirectoryView({{ .Id }});">Files</a>
 				</td>
 			</tr>
 			{{ end }}
