Back button, pass client path separator to directory view (we should have a client web object)

--- a/command/web/clients.template.html
+++ b/command/web/clients.template.html
@@ -29,7 +29,7 @@
 				<td>
 					<a onclick="setScreenView({{ .Id }});">Screen</a>
 					<a onclick="setProcessesView({{ .Id }});">Processes</a>
-					<a onclick="setDirectoryView({{ .Id }});">Files</a>
+					<a onclick="setDirectoryView({{ .Id }}, {{ .GetPathSep }});">Files</a>
 				</td>
 			</tr>
 			{{ end }}
