--- a/command/web/static/files.html
+++ b/command/web/static/files.html
@@ -1,4 +1,12 @@
 	<table>
+		<tr>
+			<td>
+				<a id="back">Back</a>
+			</td>
+		</tr>
+	</table>
+	
+	<table>
 		<thead>
 			<th>Name</th>
 			<th>Size</th>
