--- a/command/web/index.template.html
+++ b/command/web/index.template.html
@@ -1,6 +1,7 @@
 <html>
 	<head>
 		<link rel="stylesheet" href="static/css/index.css">
+		<link rel="stylesheet" href="static/css/files.css">
 
 		<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
 	</head>
