currently empty build endpoint

--- a/command/web/index.template.html
+++ b/command/web/index.template.html
@@ -16,6 +16,7 @@
 
 		<!-- Statusbar -->
 		<div id="statusbar" class="statusbar">
+			<a onclick="setBuildView()">Build</a>
 			<p class="version">{{ Version }}</p>
 			<p id="error" class="error"></p>
 		</div>
