web: UPX build option

--- a/command/web/static/build.html
+++ b/command/web/static/build.html
@@ -28,10 +28,19 @@
 				<input type="number" id="delay" min=1 max=300 value=15></input>
 			</td>
 		</tr>
+
+		<!-- Final row -->
+		<tr>
+			<td>
+				<input type="checkbox">UPX</input>
+			</td>
+			<td>
+				<input id="submit" type="button" value="Build"></input>
+			</td>
+		</tr>
 	</table>
 
 	<br>
 
-	<input id="submit" type="button" value="Build"></input>
 
 	<p id="log"></p>
