upload file from command

--- a/command/web/static/files.html
+++ b/command/web/static/files.html
@@ -3,6 +3,7 @@
 			<td>
 				<a id="back">Back</a>
 				<input id="dir" readonly></input>
+				<a id="upload">Upload</a>
 			</td>
 		</tr>
 	</table>
