web: implement transfers view

--- a/command/web/index.template.html
+++ b/command/web/index.template.html
@@ -18,6 +18,7 @@
 		<div id="statusbar" class="statusbar">
 			<a onclick="setBuildView()">Build</a>
 			<p class="version">{{ Version }}</p>
+			<p onclick="setTransfersView()">Transfers</p>
 			<p id="error" class="error"></p>
 		</div>
 	</body>
