--- a/command/web/static/files.html
+++ b/command/web/static/files.html
@@ -4,6 +4,7 @@
 				<a id="back">Back</a>
 				<input id="dir" readonly></input>
 				<a id="upload">Upload</a>
+				<a onclick="setTransfersView()">Transfers</a>
 			</td>
 		</tr>
 	</table>
