web: toggle mouse move

--- a/command/web/static/screen.html
+++ b/command/web/static/screen.html
@@ -10,6 +10,9 @@
 			<td>
 				<select id="monitors"></select>
 			</td>
+			<td>
+				<input id="cursor" type="checkbox">Move cursor</input>
+			</td>
 		</tr>
 	</table>
 </div>
