web: read upx checkbox

--- a/command/web/static/build.html
+++ b/command/web/static/build.html
@@ -32,7 +32,7 @@
 		<!-- Final row -->
 		<tr>
 			<td>
-				<input type="checkbox">UPX</input>
+				<input id="upx" type="checkbox">UPX</input>
 			</td>
 			<td>
 				<input id="submit" type="button" value="Build"></input>
