build with Name parameter (installation file name, used as ID)

--- a/command/web/static/build.html
+++ b/command/web/static/build.html
@@ -1,8 +1,14 @@
 	<table>
 		<tr>
+			<td>Name</td>
+			<td>
+				<input type="text" id="name" placeholder="name"></input>
+			</td>
+		</tr>
+		<tr>
 			<td>Host</td>
 			<td>
-				<input type="text" id="host"></input>
+				<input type="text" id="host" placeholder="127.0.0.1:9999"></input>
 			</td>
 		<tr>
 		<tr>
