remote keyboard (windows)

--- a/command/web/static/screen.html
+++ b/command/web/static/screen.html
@@ -12,6 +12,7 @@
 			</td>
 			<td>
 				<input id="cursor" type="checkbox">Move cursor</input>
+				<input id="keyboard" type="checkbox">Keyboard</input>
 			</td>
 		</tr>
 	</table>
