--- a/command/web/index.template.html
+++ b/command/web/index.template.html
@@ -17,8 +17,11 @@
 		<!-- Statusbar -->
 		<div id="statusbar" class="statusbar">
 			<a onclick="setBuildView()">Build</a>
+			<div class="separator"></div>
 			<p class="version">{{ Version }}</p>
+			<div class="separator"></div>
 			<p onclick="setTransfersView()">Transfers</p>
+			<div class="separator"></div>
 			<p id="error" class="error"></p>
 		</div>
 	</body>
