web: status label shows if connected

--- a/command/web/index.template.html
+++ b/command/web/index.template.html
@@ -22,7 +22,7 @@
 			<div class="separator"></div>
 			<p onclick="setTransfersView()">Transfers</p>
 			<div class="separator"></div>
-			<p id="error" class="error"></p>
+			<p id="status"></p>
 		</div>
 	</body>
 
