--- a/command/web/index.template.html
+++ b/command/web/index.template.html
@@ -2,6 +2,7 @@
 	<head>
 		<link rel="stylesheet" href="static/css/index.css">
 		<link rel="stylesheet" href="static/css/files.css">
+		<link rel="stylesheet" href="static/css/terminal.css">
 
 		<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
 	</head>
@@ -27,5 +28,6 @@
 	</body>
 
 	<script src="static/lib.js"></script>
+	<script src="static/ansi.js"></script>
 	<script src="static/onload.js"></script>
 </html>
