--- a/command/web/terminal.template.html
+++ b/command/web/terminal.template.html
@@ -6,8 +6,8 @@
 
 		<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
 	</head>
-	<body>
-		<span id="terminal" width="100%" height="100%"></span>
+	<body id="terminal">
+		<div id="display"></div>
 		<input type="text" id="command">
 	</body>
 
