web: winpe assembly information table

--- a/command/web/static/build.html
+++ b/command/web/static/build.html
@@ -48,5 +48,24 @@
 
 	<br>
 
+	<table id="manifest">
+		<thead>
+			<th>Assembly Information</th>
+			<th></th>
+		</thead>
+		<tbody>
+			<tr>
+				<td>Version</td>
+				<td><input type="text" id="version" placeholder="1.0.0.0"></input></td>
+			</tr>
+			<tr>
+				<td>Icon</td>
+				<td><input type="file" id="icon"></input></td>
+			</tr>
+		</tbody>
+	</table>
+
+	<br>
+
 
 	<p id="log"></p>
