web: do not offer build for macOS x86

--- a/command/web/static/build.html
+++ b/command/web/static/build.html
@@ -23,8 +23,8 @@
 
 				<select id="arch">
 					<option value="all">All</option>
-					<option value="amd64">amd64</option>
-					<option value="386">x86</option>
+					<option value="amd64" id="amd64">amd64</option>
+					<option value="386" id="386">x86</option>
 				</select>
 			</td>
 		</tr>
