web: exit label in statusbar

--- a/command/web/index.template.html
+++ b/command/web/index.template.html
@@ -17,6 +17,8 @@
 			<p onclick="setTransfersView()">Transfers</p>
 			<div class="separator"></div>
 			<p id="status"></p>
+			<div class="separator"></div>
+			<p onclick="exit()">Exit</p>
 		</div>
 	</body>
 {{ template "tail" "index" }}
