--- a/command/web/static/files.html
+++ b/command/web/static/files.html
@@ -6,6 +6,10 @@
 				<a id="upload">Upload</a>
 				<a onclick="setTransfersView()">Transfers</a>
 			</td>
+			<td>
+				<a id="download">Download</a>
+				<a id="delete">Delete</a>
+			</td>
 		</tr>
 	</table>
 	
@@ -14,7 +18,6 @@
 			<th>Name</th>
 			<th>Size</th>
 			<th>Last modified</th>
-			<th></th>
 		</thead>
 		<tbody id="files">
 
