decide when building if the client should accept invalid TLS certificates

--- a/command/web/static/build.html
+++ b/command/web/static/build.html
@@ -38,7 +38,7 @@
 		<!-- Final row -->
 		<tr>
 			<td>
-
+				<input type="checkbox" id="invalidssl" checked>Accept invalid certificates</input>
 			</td>
 			<td>
 				<input id="submit" type="button" value="Build"></input>
