web: pick install location when building

--- a/command/web/static/build.html
+++ b/command/web/static/build.html
@@ -34,6 +34,16 @@
 				<input type="number" id="delay" min=1 max=300 value=15></input>
 			</td>
 		</tr>
+		<tr>
+			<td>Install location</td>
+			<td>
+				<input type="radio" name="path" value="0" checked> Skip Install
+				<br>
+				<input type="radio" name="path" value="1"> Desktop
+				<br>
+				<input type="radio" name="path" value="2"> Home
+			</td>
+		</tr>
 
 		<!-- Final row -->
 		<tr>
