controller: simple authentication

--- a/command/web/index.template.html
+++ b/command/web/index.template.html
@@ -19,6 +19,8 @@
 			<p id="status"></p>
 			<div class="separator"></div>
 			<p onclick="exit()">Exit</p>
+			<div class="separator"></div>
+			<p onclick="logout()">Logout</p>
 		</div>
 	</body>
 {{ template "tail" "index" }}
