--- a/command/web/static/processes.html
+++ b/command/web/static/processes.html
@@ -1,3 +1,10 @@
+	<table>
+		<tr>
+			<td>
+				<a id="kill">Kill</a>
+			</td>
+		</tr>
+	</table>
 	<table id="processes">
 		<thead>
 			<th>Process ID</th>
