web: table search class to hook any table and search field

--- a/command/web/static/processes.html
+++ b/command/web/static/processes.html
@@ -3,6 +3,9 @@
 			<td>
 				<a id="kill">Kill</a>
 			</td>
+			<td>
+				Search <input type="text" id="search">
+			</td>
 		</tr>
 	</table>
 	<table id="processes">
