web: use tbody as table to not include thead in search

--- a/command/web/static/processes.html
+++ b/command/web/static/processes.html
@@ -8,13 +8,13 @@
 			</td>
 		</tr>
 	</table>
-	<table id="processes">
+	<table>
 		<thead>
 			<th>Process ID</th>
 			<th>Path</th>
 		</thead>
 
-		<tbody>
+		<tbody id="processes">
 			
 		</tbody>
 	</table>
