web: directory view search

--- a/command/web/static/files.html
+++ b/command/web/static/files.html
@@ -10,6 +10,9 @@
 				<a id="download">Download</a>
 				<a id="delete">Delete</a>
 			</td>
+			<td>
+				Search <input id="search">
+			</td>
 		</tr>
 	</table>
 	
