--- a/command/web/head.template.html
+++ b/command/web/head.template.html
@@ -5,6 +5,7 @@
 		<link rel="stylesheet" href="static/css/index.css">
 		<link rel="stylesheet" href="static/css/files.css">
 		<link rel="stylesheet" href="static/css/terminal.css">
+		<link rel="stylesheet" href="static/css/login.css">
 
 		<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
 	</head>
