--- a/command/web/static/login.html
+++ b/command/web/static/login.html
@@ -1,4 +1,8 @@
-Password <input type="text" id="password">
-<button type="button" id="login">Login</button>
-<br>
-<p id="login_status"></p>
+    <div class="login">
+        <center>
+             Password <input type="text" id="password">
+            <button type="button" id="login">Login</button>
+            <br>
+            <p id="login_status"></p>
+        </center>
+    </div>
