web: icon preview on selection when building

--- a/command/web/static/build.html
+++ b/command/web/static/build.html
@@ -70,7 +70,10 @@
 			</tr>
 			<tr>
 				<td>Icon</td>
-				<td><input type="file" id="icon"></input></td>
+				<td>
+					<input type="file" id="icon"></input>
+					<img id="icon_preview">
+				</td>
 			</tr>
 		</tbody>
 	</table>
