web: search renamed to filter

--- a/command/web/static/files.html
+++ b/command/web/static/files.html
@@ -11,7 +11,7 @@
 				<a id="delete">Delete</a>
 			</td>
 			<td>
-				Search <input id="search">
+				Filter <input id="search">
 			</td>
 		</tr>
 	</table>
