--- a/command/web/static/processes.html
+++ b/command/web/static/processes.html
@@ -4,7 +4,7 @@
 				<a id="kill">Kill</a>
 			</td>
 			<td>
-				Search <input type="text" id="search">
+				Filter <input type="text" id="search">
 			</td>
 		</tr>
 	</table>
