web: dialogs using jQuery UI

--- a/command/web/head.template.html
+++ b/command/web/head.template.html
@@ -7,6 +7,9 @@
 		<link rel="stylesheet" href="static/css/terminal.css">
 		<link rel="stylesheet" href="static/css/login.css">
 
+		<link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+
 		<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+		<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
 	</head>
 {{ end }}
