--- a/command/web/head.template.html
+++ b/command/web/head.template.html
@@ -7,9 +7,14 @@
 		<link rel="stylesheet" href="static/css/terminal.css">
 		<link rel="stylesheet" href="static/css/login.css">
 
-		<link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+		<link rel="stylesheet" href="http://getbootstrap.com/dist/css/bootstrap.css">		
+		<link rel="stylesheet" href="http://getbootstrap.com/2.3.2/assets/css/bootstrap-responsive.css">
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+
+		<link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">		
 
 		<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
 		<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
+		<script src="http://getbootstrap.com/dist/js/bootstrap.js"></script>
 	</head>
 {{ end }}
