--- a/command/web/static/files.html
+++ b/command/web/static/files.html
@@ -26,3 +26,11 @@
 
 		</tbody>
 	</table>
+	
+<div id="menu" class="dropdown clearfix" style="position: absolute; display: none;">
+	<ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu" style="display:block; position:static; margin-bottom:5px;">
+		<li><a tabindex="-1" id="item-download">Download</a></li>
+		<li><a tabindex="-1" id="item-remove">Delete</a></li>
+		<li class="divider"></li>
+	</ul>
+</div>
