web: two views divided by splitter. document.getElementById() will not work correctly since there can be multiple of one view.

--- a/command/web/head.template.html
+++ b/command/web/head.template.html
@@ -6,6 +6,7 @@
 		<link rel="stylesheet" href="static/css/files.css">
 		<link rel="stylesheet" href="static/css/terminal.css">
 		<link rel="stylesheet" href="static/css/login.css">
+		<link rel="stylesheet" href="static/css/views.css">
 
 		<link rel="stylesheet" href="http://getbootstrap.com/dist/css/bootstrap.css">		
 		<link rel="stylesheet" href="http://getbootstrap.com/2.3.2/assets/css/bootstrap-responsive.css">
@@ -16,5 +17,6 @@
 		<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
 		<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
 		<script src="http://getbootstrap.com/dist/js/bootstrap.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/split.js/1.2.0/split.min.js"></script>
 	</head>
 {{ end }}
