--- a/command/web/clients.template.html
+++ b/command/web/clients.template.html
@@ -1,38 +1,38 @@
-	<table id="clients">
-		<thead>
-			<th>Country</th>
-			<th>Host</th>
-			<th>User@Computer</th>
-			<th>Operating System</th>
-			<th>Ping</th>
-			<th></th>
-		</thead>
+<table id="clients" class="table table-bordered">
+	<thead>
+		<th>Country</th>
+		<th>Host</th>
+		<th>User@Computer</th>
+		<th>Operating System</th>
+		<th>Ping</th>
+		<th></th>
+	</thead>
 
-		<tbody>
-			{{ range . }}
-			<tr>
-				<td>
-					<img src="static/images/flags/{{ .GetFlagName }}.png"> {{ .GetCountry }}
-				</td>
-				<td>
-					{{ .GetDisplayHost }}
-				</td>
-				<td>
-					{{ .Computer.GetDisplayName }}
-				</td>
-				<td class="os">
-					<img></img> {{ .Computer.OperatingSystem }}
-				</td>
-				<td class="ping"> 
-					{{ .Ping.Current }}
-				</td>
-				<td>
-					<a onclick="setScreenView({{ .Id }});">Screen</a>
-					<a onclick="setProcessesView({{ .Id }});">Processes</a>
-					<a onclick="setDirectoryView({{ .Id }}, {{ .GetPathSep }});">Files</a>
-					<a onclick="openTerminal({{ .Id }});">Terminal</a>
-				</td>
-			</tr>
-			{{ end }}
-		</tbody>
-	</table>
+	<tbody>
+		{{ range . }}
+		<tr>
+			<td>
+				<img src="static/images/flags/{{ .GetFlagName }}.png"> {{ .GetCountry }}
+			</td>
+			<td>
+				{{ .GetDisplayHost }}
+			</td>
+			<td>
+				{{ .Computer.GetDisplayName }}
+			</td>
+			<td class="os">
+				<img></img> {{ .Computer.OperatingSystem }}
+			</td>
+			<td class="ping">
+				{{ .Ping.Current }}
+			</td>
+			<td>
+				<a onclick="setScreenView({{ .Id }});">Screen</a>
+				<a onclick="setProcessesView({{ .Id }});">Processes</a>
+				<a onclick="setDirectoryView({{ .Id }}, {{ .GetPathSep }});">Files</a>
+				<a onclick="openTerminal({{ .Id }});">Terminal</a>
+			</td>
+		</tr>
+		{{ end }}
+	</tbody>
+</table>
