--- a/command/web/static/processes.html
+++ b/command/web/static/processes.html
@@ -1,21 +1,38 @@
-	<table>
-		<tr>
-			<td>
-				<a id="spawn">Spawn</a>
-				<a id="kill">Kill</a>
-			</td>
-			<td>
-				Filter <input type="text" id="search">
-			</td>
-		</tr>
-	</table>
-	<table>
-		<thead>
-			<th>Process ID</th>
-			<th>Path</th>
-		</thead>
+<nav class="navbar navbar-default">
+	<div class="container-fluid">
+		<div class="navbar-header">
+			<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+				<span class="sr-only">Toggle navigation</span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+			</button>
+		</div>
 
-		<tbody id="processes">
-			
-		</tbody>
-	</table>
+		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+			<ul class="nav navbar-nav">
+				<li><a id="spawn">Spawn</a></li>
+				<li><a id="kill">Kill</a></li>
+			</ul>
+			<form class="navbar-form navbar-left">
+				<div class="form-group">
+					<input type="text" id="search" class="form-control" placeholder="Search">
+				</div>
+			</form>
+			<ul class="nav navbar-nav navbar-right">
+				<li><a id="close1">Close</a></li>
+			</ul>
+		</div>
+	</div>
+</nav>
+
+<table class="table table-bordered">
+	<thead>
+		<th>Process ID</th>
+		<th>Path</th>
+	</thead>
+
+	<tbody id="processes">
+
+	</tbody>
+</table>
