web: folder structure, js-cookie for settings

--- a/command/web/head.template.html
+++ b/command/web/head.template.html
@@ -18,5 +18,6 @@
 		<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
 		<script src="http://getbootstrap.com/dist/js/bootstrap.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/split.js/1.2.0/split.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/js-cookie/2.1.4/js.cookie.min.js"></script>
 	</head>
 {{ end }}
