web: terminal window is now a normal view

--- a/command/web/clients.template.html
+++ b/command/web/clients.template.html
@@ -30,7 +30,7 @@
 				<a onclick="setScreenView({{ .Id }});">Screen</a>
 				<a onclick="setProcessesView({{ .Id }});">Processes</a>
 				<a onclick="setDirectoryView({{ .Id }}, {{ .GetPathSep }});">Files</a>
-				<a onclick="openTerminal({{ .Id }});">Terminal</a>
+				<a onclick="TerminalView.open({{ .Id }});">Terminal</a>
 			</td>
 		</tr>
 		{{ end }}
