--- a/command/web/static/transfers.html
+++ b/command/web/static/transfers.html
@@ -1,12 +1,12 @@
-	<table>
-		<thead>
-			<th>Status</th>
-			<th>Local</th>
-			<th>Remote</th>
-			<th>Progress</th>
-			<th></th>
-		</thead>
-		<tbody id="transfers">
+<table class="table table-bordered files">
+	<thead>
+		<th>Status</th>
+		<th>Local</th>
+		<th>Remote</th>
+		<th>Progress</th>
+		<th></th>
+	</thead>
+	<tbody id="transfers">
 
-		</tbody>
-	</table>
+	</tbody>
+</table>
