web: basic bootstrap classes on unfinished views

--- a/command/web/static/build.html
+++ b/command/web/static/build.html
@@ -1,4 +1,4 @@
-	<table>
+	<table class="table table-bordered">
 		<tr>
 			<td>Name</td>
 			<td>
@@ -58,7 +58,7 @@
 
 	<br>
 
-	<table id="manifest">
+	<table class="table table-bordered" id="manifest">
 		<thead>
 			<th>Assembly Information</th>
 			<th></th>
@@ -79,6 +79,3 @@
 	</table>
 
 	<br>
-
-
-	<p id="log"></p>
