web: remove individual close element listeners

--- a/command/web/static/screen.html
+++ b/command/web/static/screen.html
@@ -14,6 +14,9 @@
 				<input id="cursor" type="checkbox">Move cursor</input>
 				<input id="keyboard" type="checkbox">Keyboard</input>
 			</td>
+			<td>
+				<a id="close">Close</a>
+			</td>
 		</tr>
 	</table>
 </div>
