web: fix terminal element id:s, add close element at temporary location

--- a/command/web/static/terminal.html
+++ b/command/web/static/terminal.html
@@ -1,16 +1,18 @@
-<div class="terminal"></div>
+<div id="terminal"></div>
 
 <div class="input-group input-group-sm">
     <span class="input-group-addon" id="basic-addon1"><span class="glyphicon glyphicon-menu-right"></span></span>
-    <input class="command form-control" aria-label="...">
+    <input id="command" class="form-control" aria-label="...">
 
     <div class="input-group-btn">
-        <button type="button" class="clear btn btn-default" aria-label="Bold">
+        <button type="button" id="clear" class="btn btn-default" aria-label="Bold">
             <span class="glyphicon glyphicon-remove"></span>
         </button>
-        <button type="button" class="run btn btn-default" aria-label="Bold">
+        <button type="button" id="run" class="btn btn-default" aria-label="Bold">
             Run
         </button>
     </div>
 </div>
+
+<a id="close">Close</a>
 
