web: add bootstrap slider

--- a/command/web/head.template.html
+++ b/command/web/head.template.html
@@ -8,6 +8,8 @@
 		<link rel="stylesheet" href="static/css/login.css">
 		<link rel="stylesheet" href="static/css/views.css">
 
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-slider/9.8.0/css/bootstrap-slider.min.css">
+
 		<link rel="stylesheet" href="https://getbootstrap.com/dist/css/bootstrap.css">		
 		<link rel="stylesheet" href="https://getbootstrap.com/2.3.2/assets/css/bootstrap-responsive.css">
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -19,5 +21,6 @@
 		<script src="https://getbootstrap.com/dist/js/bootstrap.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/split.js/1.2.0/split.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/js-cookie/2.1.4/js.cookie.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-slider/9.8.0/bootstrap-slider.min.js"></script>
 	</head>
 {{ end }}
