web: static title

--- a/command/web/head.template.html
+++ b/command/web/head.template.html
@@ -22,5 +22,7 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/split.js/1.2.0/split.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/js-cookie/2.1.4/js.cookie.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-slider/9.8.0/bootstrap-slider.min.js"></script>
+
+		<title>TSM</title>
 	</head>
 {{ end }}
