--- a/command/web/head.template.html
+++ b/command/web/head.template.html
@@ -3,6 +3,7 @@
 <html>
 	<head>
 		<link rel="stylesheet" href="static/css/index.css">
+		<link rel="stylesheet" href="static/css/contextmenu.css">
 		<link rel="stylesheet" href="static/css/files.css">
 		<link rel="stylesheet" href="static/css/terminal.css">
 		<link rel="stylesheet" href="static/css/login.css">
