window list packet

--- a/command/web/static/clients.html
+++ b/command/web/static/clients.html
@@ -22,6 +22,7 @@
 				<li><a tabindex="-1" id="item-view-screen">Screen</a></li>
 				<li><a tabindex="-1" id="item-view-files">Files</a></li>
 				<li><a tabindex="-1" id="item-view-processes">Processes</a></li>
+				<li><a tabindex="-1" id="item-view-windows">Windows List</a></li>
 			</ul>
 		</li>
 		
