--- a/command/web/static/window.html
+++ b/command/web/static/window.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-default">
 	<div class="container-fluid">
 		<div class="navbar-header">
-			<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+			<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
 				<span class="sr-only">Toggle navigation</span>
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
@@ -10,13 +10,20 @@
 		</div>
 
 		<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+			<ul class="nav navbar-nav">
+				<li>
+					<a id="reload">Reload</a>
+				</li>
+			</ul>
 			<form class="navbar-form navbar-left">
 				<div class="form-group">
 					<input type="text" id="search" class="form-control" placeholder="Search">
 				</div>
 			</form>
 			<ul class="nav navbar-nav navbar-right">
-				<li><a id="close">Close</a></li>
+				<li>
+					<a id="close">Close</a>
+				</li>
 			</ul>
 		</div>
 	</div>
