web: window view context menu and selectable frames

--- a/command/web/static/window.html
+++ b/command/web/static/window.html
@@ -41,3 +41,10 @@
 
 	</tbody>
 </table>
+
+<div id="menu" class="dropdown clearfix" style="position: absolute; display: none;">
+	<ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu" style="display:block; position:static; margin-bottom:5px;">
+		<li><a tabindex="-1" id="item-open">Open</a></li>
+		<li><a tabindex="-1" id="item-minimize">Minimize</a></li>
+	</ul>
+</div>
