--- a/command/web/static/window.html
+++ b/command/web/static/window.html
@@ -44,6 +44,7 @@
 
 <div id="menu" class="dropdown clearfix" style="position: absolute; display: none;">
 	<ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu" style="display:block; position:static; margin-bottom:5px;">
+		<li><a tabindex="-1" id="item-stream">Stream</a></li>
 		<li><a tabindex="-1" id="item-open">Open</a></li>
 		<li><a tabindex="-1" id="item-minimize">Minimize</a></li>
 	</ul>
