web: window streaming view with window selector dropdown and scale slider

--- a/command/web/static/window_stream.html
+++ b/command/web/static/window_stream.html
@@ -1,1 +1,19 @@
+<br>
+
+<input id="scale" data-slider-id='ex1Slider' type="text" data-slider-min="10" data-slider-max="100" data-slider-step="10" data-slider-value="50"/>
+
+<div class="btn-group">
+	<div class="btn-group" role="group">
+		<button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown"> Window</span>   <span class="caret"></span></button>
+		<ul class="dropdown-menu" id="windows">
+
+		</ul>
+	</div>
+
+	<button type="button" id="close" class="btn btn-default">Close</button>
+</div>
+
+<br>
+<br>
+
 <img id="screen" src="">
