--- a/command/web/head.template.html
+++ b/command/web/head.template.html
@@ -9,20 +9,18 @@
 		<link rel="stylesheet" href="static/css/login.css">
 		<link rel="stylesheet" href="static/css/views.css">
 
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-slider/9.8.0/css/bootstrap-slider.min.css">
+		<link rel="stylesheet" href="static/third/css/jquery-ui.css">
+		<link rel="stylesheet" href="static/third/css/bootstrap-slider.min.css">
+		<link rel="stylesheet" href="static/third/css/bootstrap.min.css">
+		<link rel="stylesheet" href="static/third/css/bootstrap-responsive.css">
+		<link rel="stylesheet" href="static/third/css/font-awesome.min.css">
 
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">		
-		<link rel="stylesheet" href="https://getbootstrap.com/2.3.2/assets/css/bootstrap-responsive.css">
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-
-		<link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">		
-
-		<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
-		<script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"></script>
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/split.js/1.2.0/split.min.js"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/js-cookie/2.1.4/js.cookie.min.js"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-slider/9.8.0/bootstrap-slider.min.js"></script>
+		<script src="static/third/scripts/jquery-3.1.1.min.js"></script>
+		<script src="static/third/scripts/jquery-ui.min.js"></script>
+		<script src="static/third/scripts/bootstrap.min.js"></script>
+		<script src="static/third/scripts/split.min.js"></script>
+		<script src="static/third/scripts/js.cookie.min.js"></script>
+		<script src="static/third/scripts/bootstrap-slider.min.js"></script>
 
 		<title>TSM</title>
 	</head>
